# ros_helios

./: .gitignore  .gitmodules  ArchyROS.xml  CODE_OF_CONDUCT.md  CataArchyPhy.xml  README.md  install.sh  package.xml  regulation_helios.xml  simu_rviz.rviz
LidarLite_Arduino/: CMakeLists.txt  README.md  package.xml
LidarLite_Arduino/launch/: lidarlite_rosserial.launch
helios_command/: CMakeLists.txt  CataArchyPhy.xml  LICENSE  driver_maestro.py  package.xml  setup.py
helios_command/config/: pwmconfig.yaml
helios_command/launch/: autonomy.launch  command.launch  gpsTest.launch  helios.launch  yoda_init.launch  yoda_teleop.launch
helios_command/msg/: PwmCmd.msg
helios_command/scripts/: yoda_teleop.py
helios_command/src/: cmd_interpreter.py  command_plot.py  line_pub.cpp  local_converter.cpp  maestro_driver.cpp  mission_pub.cpp  navigation.cpp  navigation_autonomy.py  path.cpp  path_pub.cpp  regulation.cpp  vehicule_autonomy.py
helios_control/helios_command/: CMakeLists.txt  setup.py
helios_hardware/helios_navigation/: CMakeLists.txt  README.md  package.xml
install_files/: 99-helios.rules
leddartech/: CMakeLists.txt  README.md  package.xml
leddartech/launch/: apm.launch  apm_config.yaml  leddar.launch  mapping.launch  px4.launch  px4_config.yaml
leddartech/src/: leddartech.cpp  periodic_snapshotter.cpp  point_cloud_conversion.cpp
leddartech/srv/: PointCloudConversion.srv
ros_helios_config/: CMakeLists.txt  LICENSE  README.md  package.xml
ros_helios_config/launch/: command.launch  drivers.launch  (+6 more)
sbg_ros_driver-1.0.7/: sbg_ellipse.launch
(+115 files in other folders)
